CSS styling and commenting JS

--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
         <button class="start-button">Start</button>
       </div>
     </section>
-
   </main>
+
+  <div class="popup-info">
+    <h2>Quiz Guide</h2>
+    <span class="info">1. TEXT GOES HERE</span>
+    <span class="info">2. TEXT GOES HERE</span>
+    <span class="info">3. TEXT GOES HERE</span>
+    <span class="info">4. TEXT GOES HERE</span>
+    <span class="info">5. TEXT GOES HERE</span>
+
+    <div class="button-group">
+      <button class="info-button exit-button">Exit Quiz</button>
+      <a href="#" class="info-button continue-button">Continue</a>
+    </div>
+  </div>
 
   <script src="Assets\questionaire.js"></script>
   <script src="Assets\script.js"></script>
