--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h2 class="question-text">Inside which HTML element do we put the JavaScript?</h2>
 
           <div class="option-list">
-            <div class="option">
+            <!-- <div class="option">
               <span>A. javascript</span>
             </div>
             <div class="option">
@@ -43,7 +43,7 @@
             </div>
             <div class="option">
               <span>D. script</span>
-            </div>
+            </div> -->
           </div>
 
           <div class="quiz-footer">
